--- a/src/App.css
+++ b/src/App.css
@@ -3,40 +3,10 @@
   padding: 0;
   outline: 0;
   scroll-behavior: smooth;
+  font-family: "Playwrite DE Grund", cursive;
 }
 body{
-  width: 100%;
-  height: 100vh;
+  @apply w-full h-screen;
   background: url(../public/img/bg.jpg);
   background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-/* Home Page Profile Animation */
-.fuhadShiblu_animated{
-  animation: colAnim 1s linear infinite;
-}
-@keyframes colAnim{
-  0% {
-      background-color: #bd0000;
-  }
-  50% {
-      background-color: #00bd00;
-  }
-  100% {
-      background-color: #0000bd;
-  }
-}
-
-/* Set Navbar Scrollbar */
-.fuhadShiblu_setNavScroll::-webkit-scrollbar{
-  width: 10px;
-}
-.fuhadShiblu_setNavScroll::-webkit-scrollbar-track{
-  background: #ffffff;
-  border-radius: 10px;
-}
-.fuhadShiblu_setNavScroll::-webkit-scrollbar-thumb{
-  background: #adadad;
-  border-radius: 10px;
 }
