--- a/src/assets/Component/BlogCompo/BlogCompo.css
+++ b/src/assets/Component/BlogCompo/BlogCompo.css
@@ -1,18 +1,18 @@
-.fuhadShiblu_setContactScroll::-webkit-scrollbar{
+.fuhadShiblu_setBlogScroll::-webkit-scrollbar{
     width: 10px;
 }
-.fuhadShiblu_setContactScroll:hover::-webkit-scrollbar-track{
+.fuhadShiblu_setBlogScroll:hover::-webkit-scrollbar-track{
     background: #ffffff;
     border-radius: 10px;
 }
-.fuhadShiblu_setContactScroll:hover::-webkit-scrollbar-thumb{
+.fuhadShiblu_setBlogScroll:hover::-webkit-scrollbar-thumb{
     background: #adadad;
     border-radius: 10px;
 }
-.fuhadShiblu_setContactScroll{
+.fuhadShiblu_setBlogScroll{
     box-shadow: -1px 0px 12px 7px rgba(0,0,0,0.75);
 }
-.fuhadShiblu_contactLine::after{
+.fuhadShiblu_BlogLine::after{
     @apply absolute bg-[#ff1818] w-full h-1 bottom-0 left-[50%] translate-x-[-50%];
     content: '';
 }
