--- a/src/assets/Component/HomeCompo/HomeCompo.css
+++ b/src/assets/Component/HomeCompo/HomeCompo.css
@@ -1,4 +1,4 @@
-.fuhadShiblu_bs{
+.fuhadShiblu_setHomeScroll{
     box-shadow: -1px 0px 12px 7px rgba(0,0,0,0.75);
 }
 .fuhadShiblu_animated{
@@ -15,3 +15,14 @@
         background-color: #0000bd;
     }
   }
+.fuhadShiblu_setHomeScroll::-webkit-scrollbar{
+    width: 10px;
+}
+.fuhadShiblu_setHomeScroll:hover::-webkit-scrollbar-track{
+    background: #ffffff;
+    border-radius: 10px;
+}
+.fuhadShiblu_setHomeScroll:hover::-webkit-scrollbar-thumb{
+    background: #adadad;
+    border-radius: 10px;
+}
